Revision history for {{$dist->name}}

{{$NEXT}}

1.96      2017-07-28 17:25:53 -0400
  - add Alien::Alien
  - remove Alien::Base
  - add Alien::Autotools
  - add Alien::Base::Dino
  - remove Alien::Base::Wrapper
  - add Alien::Build::Git
  - add Alien::Build::Plugin::Decode::SourceForge
  - add Alien::Build::Plugin::Fetch::Prompt
  - add Alien::Build::Plugin::Fetch::Rewrite
  - add Alien::GMP
  - add Alien::gzip
  - add File::ShareDir::Dist
  - add Test2::Plugin::FauxHomeDir
  - add Test2::Tools::URL
  - Updated my dists to latest

1.95      2017-07-12 20:22:33 -0400
  - Updated my dists to latest

1.94      2017-07-12 19:57:30 -0400
  - Remove Test::Alien
  - add Alien::autoconf
  - add Alien::automake
  - add Alien::Build::Plugin::Fetch::PromptBeforeDownload
  - add Alien::Build::Plugin::Probe::GnuWin32
  - add Alien::libtool
  - Updated my dists to latest

1.93      2017-05-23 10:37:49 -0400
  - Remove Alien::Packages::Cygwin
  - Remove App::which_package
  - Added Alien::Libxml2
  - Added Alien::Libarchive3
  - Added Alien::LZO
  - Added Alien::Build::ModuleBuild
  - Added Alien::Nettle
  - Added Module::Build::FFI
  - Updated my dists to latest

1.92      2017-03-23 14:00:31 -0400
  - Remove Alien::o2dll

1.91      2017-03-23 12:40:05 -0400
  - Removed Alien::bz2 (now part of Alien::Libbz2)
  - Added Acme::Alien::DontPanic2
  - Added Acme::Ford::Prefect2
  - Added Alien::Base::Wrapper
  - Added Alien::Build::MB
  - Added Alien::Build::Plugin::Fetch::Cache
  - Added Alien::MSYS2
  - Added App::af
  - Updated my dists to latest

1.90      2017-01-31 11:03:39 -0500
  - Added Alien::Build
  - Added Alien::curl
  - Added Alien::pkgconf
  - Added Alien::xz
  - Added Dist::Zilla::Plugin::AlienBuild
  - Added PkgConfig::LibPkgConf
  - Updated my dists to latest

1.89      2016-11-23 09:08:48 -0500
  - Added Class::Inspector
  - Updated my dists to latest

1.88      2016-05-09 13:07:34 -0400
  - Added Clustericious::Coder::BSON