@@ -15,53 +15,57 @@ remove = strict
 remove = Test::More
 
 [Prereqs]
-Acme::Alien::DontPanic                         = 0.038
-Acme::Alien::DontPanic2                        = 0.3200
-Acme::Ford::Prefect                            = 0.038
-Acme::Ford::Prefect2                           = 0.3200
-Acme::Ford::Prefect::FFI                       = 0.28
+Acme::Alien::DontPanic                         = 0.042
+Acme::Alien::DontPanic2                        = 0.7500
+Acme::Ford::Prefect                            = 0.042
+Acme::Ford::Prefect2                           = 0.7500
+Acme::Ford::Prefect::FFI                       = 0.29
 Alien                                          = 0.95
 Alien::Alien                                   = 0.02
-Alien::autoconf                                = 0.05
-Alien::automake                                = 0.07
-Alien::Autotools                               = 1.01
-Alien::Base::Dino                              = 0.01
+Alien::autoconf                                = 0.07
+Alien::automake                                = 0.11
+Alien::Autotools                               = 1.02
 Alien::Base::ModuleBuild                       = 0.042
 Alien::bison                                   = 0.19
-Alien::Build                                   = 0.75
-Alien::Build::Git                              = 0.02
+Alien::Build                                   = 0.95
+Alien::Build::Git                              = 0.05
 Alien::Build::MB                               = 0.03
+Alien::Build::Plugin::Build::CMake             = 0.02
+Alien::Build::Plugin::Build::Make              = 0,02
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
-Alien::Build::Plugin::Fetch::Cache             = 0.03
+Alien::Build::Plugin::Fetch::Cache             = 0.04
 Alien::Build::Plugin::Probe::GnuWin32          = 0.59
-Alien::Build::Plugin::Fetch::Prompt            = 0.58
-Alien::Build::Plugin::Fetch::Rewrite           = 0.01
+Alien::Build::Plugin::Fetch::Prompt            = 0.59
+Alien::Build::Plugin::Fetch::Rewrite           = 0.02
 Alien::bz2::Installer                          = 0.05
-Alien::CMake                                   = 0.08
+Alien::CMake                                   = 0.09
+Alien::cmake3                                  = 0.03
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
-Alien::FFI                                     = 0.16
+Alien::FFI                                     = 0.17
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.20
-Alien::GMP                                     = 0.1.0
+Alien::GMP                                     = 1.04
 Alien::gzip                                    = 0.03
-Alien::Hunspell                                = 0.10
+Alien::Hunspell                                = 0.11
 Alien::Libarchive                              = 0.28
 Alien::Libarchive::Installer                   = 0.15
 Alien::Libarchive3                             = 0.28
 Alien::Libbz2                                  = 0.22
-Alien::libtool                                 = 0.06
+Alien::libtool                                 = 0.07
 Alien::libtool24                               = 0.05
 Alien::LibYAML                                 = 2.01
+Alien::Libxml2                                 = 0.02
 Alien::LZO                                     = 0.02
-Alien::m4                                      = 0.12
+Alien::m4                                      = 0.16
 Alien::MSYS                                    = 0.09
 Alien::MSYS2                                   = 0.02
 Alien::nasm                                    = 0.18
-Alien::Nettle                                  = 0.03
+Alien::Nettle                                  = 0.04
 Alien::patch                                   = 0.12
 Alien::pkgconf                                 = 0.10
-Alien::Libxml2                                 = 0.01
+Alien::Role::Alt                               = 0.03
+Alien::Role::Dino                              = 0.03
 Alien::xz                                      = 0.06
 ;Alt::Alien::FFI::System                       = 0.16
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
@@ -71,11 +75,10 @@ AnyEvent::FTP                                  = 0.14
 AnyEvent::Git::Wrapper                         = 0.10
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
-AnyEvent::WebSocket::Client                    = 0.39
-App::af                                        = 0.11
-App::cpangitify                                = 0.16
+AnyEvent::WebSocket::Client                    = 0.41
+App::af                                        = 0.14
+App::cpangitify                                = 0.17
 App::pwhich                                    = 1.14
-App::palien                                    = 0.03
 App::RegexFileUtils                            = 0.07
 App::spaceless                                 = 0.07
 Archive::Ar::Libarchive                        = 2.06
@@ -83,27 +86,28 @@ Archive::Libarchive::Any                       = 0.0900
 Archive::Libarchive::FFI                       = 0.0900
 Archive::Libarchive::XS                        = 0.0901
 Authen::Simple::PlugAuth                       = 0.02
-Class::Inspector                               = 1.31
+Class::Inspector                               = 1.32
 Clustericious                                  = 1.26
 Clustericious::Coder::BSON                     = 0.01
 Clustericious::Admin                           = 1.10
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.20
+Dist::Zilla::Plugin::AlienBuild                = 0.22
 Dist::Zilla::Plugin::Alt                       = 0.04
-Dist::Zilla::Plugin::Author::Plicease          = 2.20
+Dist::Zilla::Plugin::Author::Plicease          = 2.21
+Dist::Zilla::Plugin::CommentOut                = 0.03
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
-Dist::Zilla::Plugin::InsertExample             = 0.07
+Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::jQuery                    = 0.05
 Dist::Zilla::Plugin::MathInt64                 = 0.09
 Dist::Zilla::Plugin::OurPkgVersion             = 0.12
 Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.09
-Dist::Zilla::Plugin::TextTabs                  = 0.03
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.20
+Dist::Zilla::Plugin::TextTabs                  = 0.04
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.21
 Env::ShellWords                                = 0.01
 FFI                                            = 1.10
-FFI::CheckLib                                  = 0.15
+FFI::CheckLib                                  = 0.16
 FFI::ExtractSymbols                            = 0.03
 FFI::Platypus                                  = 0.47
 FFI::Platypus::Lang::CPP                       = 0.04
@@ -112,14 +116,14 @@ FFI::Platypus::Lang::Fortran                   = 0.07
 FFI::Platypus::Lang::Pascal                    = 0.05
 FFI::Platypus::Lang::Rust                      = 0.04
 FFI::Platypus::Type::StringArray               = 0.01
-FFI::TinyCC                                    = 0.24
+FFI::TinyCC                                    = 0.26
 FFI::Util                                      = 0.16
 File::LibMagic::FFI                            = 0.04
-File::Listing::Ftpcopy                         = 0.07
+File::Listing::Ftpcopy                         = 0.08
 File::ShareDir::Dist                           = 0.04
 File::Which                                    = 1.21
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
-Log::Log4perl::Appender::TAP                   = 0.03
+Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.47
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.59
@@ -136,7 +140,7 @@ PlugAuth::Plugin::DBIAuth                      = 0.06
 PlugAuth::Plugin::Finger                       = 0.02
 PlugAuth::Plugin::LDAP                         = 0.07
 Shell::Config::Generate                        = 0.26
-Shell::Guess                                   = 0.06
+Shell::Guess                                   = 0.07
 String::Template                               = 0.19
 Term::EditLine                                 = 0.11
 Test::CChecker                                 = 0.08
@@ -147,8 +151,8 @@ Test::Fixme                                    = 0.16
 Test::Script                                   = 1.23
 Test::Script::Async                            = 0.02
 Test::Version                                  = 2.05
-Test2::Plugin::FauxHomeDir                     = 0.02
-Test2::Tools::URL                              = 0.01
+Test2::Plugin::FauxHomeDir                     = 0.03
+Test2::Tools::URL                              = 0.02
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
